--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,29 @@
 	<meta charset="UTF-8">
 	<title>CV Aldo Matias</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<script src="https://kit.fontawesome.com/f0dc429228.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="canonical" href="" >
+	<meta name="author" content="Aldo Matias">
+	<link rel="manifest" href="assetns/manifest.json">
+	<meta name="description" content="Curriculum Aldo Matias">
+	<meta name="keywords" content="Aldo, matias, react, developer">
+	<meta name="twitter:site" content="@aldo_rheazyk">
+	<meta name="twitter:card" content="@aldo_rheazyk">
+	<meta name="twitter:title" content="Aldo Matias">
+	<meta name="twitter:description" content="Mi curriculum">
+	<meta name="twitter:image" content="">
+
+	<meta name="og:lacAle" content="es_MX">
+	<meta name="og:type" content="website">
+	<meta name="og:title" content="Aldo Matias">
+	<meta name="og:description" content="Mi curriculum vitae">
+	<meta name="og:url" content="">
+	<meta name="og:site_name" content="">
+	<meta name="og:image" content="">
+	
+
+
 </head>
 <body>
 	<div id="app"></div>
